--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,12 +8,12 @@ option(HPDMK_BUILD_TESTS "Build tests" ON)
 option(BUILD_EXAMPLES "Build examples" OFF)
 option(BUILD_BENCHMARK "Build benchmark" ON)
 
-if(NOT CMAKE_CXX_COMPILER)
-    set(CMAKE_CXX_COMPILER icpx CACHE STRING "Intel C++ compiler" FORCE)
-endif()
-if(NOT CMAKE_C_COMPILER)
-    set(CMAKE_C_COMPILER icx CACHE STRING "Intel C compiler" FORCE)
-endif()
+# if(NOT CMAKE_CXX_COMPILER)
+#     set(CMAKE_CXX_COMPILER icpx CACHE STRING "Intel C++ compiler" FORCE)
+# endif()
+# if(NOT CMAKE_C_COMPILER)
+#     set(CMAKE_C_COMPILER icx CACHE STRING "Intel C compiler" FORCE)
+# endif()
 
 if (CMAKE_CXX_COMPILER_ID MATCHES "Intel")
   add_compile_options("-DSCTL_HAVE_SVML")
