--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "extern/eigen"]
 	path = extern/eigen
 	url = https://gitlab.com/libeigen/eigen/
+[submodule "extern/SCTL"]
+	path = extern/SCTL
+	url = https://github.com/blackwer/SCTL
